--- a/Assignment-3-part-3/style.css
+++ b/Assignment-3-part-3/style.css
@@ -2,44 +2,70 @@
 
 * {
     box-sizing: border-box;
-  }
+}
   
-  body {
+body {
     margin: 0 auto;
     min-width: 1000px;
     max-width: 1400px;
-  }
+}
   
   /* Layout */
   
-  section {
+section {
     float: left;
     width: 50%;
-  }
+}
   
-  aside {
+aside {
     float: left;
     width: 30%;
-  }
+}
   
-  nav {
+nav {
     float: left;
     width: 20%;
-  }
+}
   
-  footer {
+footer {
     clear: both;
-  }
+}
   
-  header, section, aside, nav, footer {
+header, section, aside, nav, footer {
     padding: 20px;
-  }
+}
+
+
   
   /* header and footer */
   
-  header, footer {
+header, footer {
     border-top: 5px solid #a66;
     border-bottom: 5px solid #a66;
-  }
+}
   
   /* WRITE YOUR CODE BELOW HERE */
+*{
+    font-size: 10px;
+}
+
+h1{
+    font-size: 25px;
+}
+
+h2{
+    font-size: 20px;
+}
+
+p{
+    font-size: 15px;
+    line-height: 1.4em;
+}
+
+a{
+    font-size: 15px;
+}
+
+li{
+    font-size: 15px;
+}
