--- a/Assignment-3-part-3/style.css
+++ b/Assignment-3-part-3/style.css
@@ -51,21 +51,31 @@ header, footer {
 
 h1{
     font-size: 25px;
+    text-align: center;
+    letter-spacing: 3px;
 }
 
 h2{
     font-size: 20px;
+    letter-spacing:2px;
 }
 
 p{
     font-size: 15px;
     line-height: 1.4em;
+    letter-spacing: 1px;
 }
 
 a{
     font-size: 15px;
+    letter-spacing: 1px;
 }
 
 li{
     font-size: 15px;
+    letter-spacing: 1px;
+
 }
+
+
+
