--- a/Assignment-3-part-3/style.css
+++ b/Assignment-3-part-3/style.css
@@ -62,20 +62,26 @@ h2{
 
 p{
     font-size: 15px;
-    line-height: 1.4em;
-    letter-spacing: 1px;
+    line-height: 1.4;
+    letter-spacing: 0.5px;
+    word-spacing: 1px;
 }
 
 a{
     font-size: 15px;
-    letter-spacing: 1px;
+    letter-spacing: 0.5px;
 }
 
 li{
     font-size: 15px;
-    letter-spacing: 1px;
+    line-height: 1.4;
+    letter-spacing: 0.5px;
+    word-spacing: 1px;
+
+
 
 }
+
 
 
 
