--- a/Assignment-3-part-3/style.css
+++ b/Assignment-3-part-3/style.css
@@ -77,10 +77,13 @@ li{
     line-height: 1.4;
     letter-spacing: 0.5px;
     word-spacing: 1px;
-
-
-
 }
+/* Goes into the section element and targets the level 2 headings paragraph right below it */
+h2+p{
+    text-indent: 20px;
+}
+
+
 
 
 
