--- a/Assignment-3-part-3/style.css
+++ b/Assignment-3-part-3/style.css
@@ -45,9 +45,6 @@ header, footer {
 }
   
   /* WRITE YOUR CODE BELOW HERE */
-*{
-    font-size: 10px;
-}
 
 h1{
     font-size: 25px;
@@ -70,7 +67,10 @@ p{
 a{
     font-size: 15px;
     letter-spacing: 0.5px;
+    
 }
+
+
 
 li{
     font-size: 15px;
@@ -82,6 +82,33 @@ li{
 h2+p{
     text-indent: 20px;
 }
+
+a:hover{
+    background-color: aqua;
+}
+
+a:visited{
+    color: #a66;
+}
+
+a:focus{
+    text-decoration: none;
+}
+
+a:hover{
+    text-decoration: none;
+}
+
+a:active{
+    background-color: black;
+}
+
+a[href^="http"] {
+    background: url(external-link-52.png) no-repeat 100% 0;
+    background-size: 13px 13px;
+    padding-right: 19px;
+}
+
 
 
 
