--- a/Assignment-3-part-3/style.css
+++ b/Assignment-3-part-3/style.css
@@ -45,11 +45,32 @@ header, footer {
 }
   
   /* WRITE YOUR CODE BELOW HERE */
+  @font-face {
+    font-family: Fredoka ;
+    src: url(Fredoka-VariableFont_wdth\,wght.ttf);
+    font-weight: normal;
+    font-style: normal;
 
+  }
+
+  @font-face{
+    font-family: Kanit ;
+    src: url(Kanit-Black.ttf);
+    font-weight: normal;
+    font-style: normal;
+  }
+
+html{
+    font-size: 10px;
+}
 h1{
     font-size: 25px;
     text-align: center;
     letter-spacing: 3px;
+    
+}
+h1,h2{
+    font-family: Kanit, sans-serif;
 }
 
 h2{
@@ -57,7 +78,7 @@ h2{
     letter-spacing:2px;
 }
 
-p{
+p,li{
     font-size: 15px;
     line-height: 1.4;
     letter-spacing: 0.5px;
@@ -70,14 +91,18 @@ a{
     
 }
 
-
-
-li{
-    font-size: 15px;
-    line-height: 1.4;
-    letter-spacing: 0.5px;
-    word-spacing: 1px;
+ul{
+    list-style-type:circle ;
 }
+
+nav li > a{
+    text-decoration: none;
+    font-family: Fredoka, sans-serif;
+}
+
+
+
+
 /* Goes into the section element and targets the level 2 headings paragraph right below it */
 h2+p{
     text-indent: 20px;
@@ -85,6 +110,7 @@ h2+p{
 
 a:hover{
     background-color: aqua;
+    text-decoration: none;
 }
 
 a:visited{
@@ -95,9 +121,6 @@ a:focus{
     text-decoration: none;
 }
 
-a:hover{
-    text-decoration: none;
-}
 
 a:active{
     background-color: black;
@@ -109,8 +132,23 @@ a[href^="http"] {
     padding-right: 19px;
 }
 
+nav li{
+    list-style-type: none;
+    border:  2px solid #a66;
+   margin: 10px 10px;
+   font-size: 2.5rem;
+   text-align: center;
+   line-height: 2;
+   margin-top: 15px;
+   width: 100%;
+   
 
 
+}
+
+p,li,a{
+    font-family: Fredoka ;
+}
 
 
 
