--- a/Assignment-3-part-4/style.css
+++ b/Assignment-3-part-4/style.css
@@ -8,6 +8,9 @@ body {
   img {
       max-width: 100%;
       display: block;
+      float: left;
+      
+
   }
   
   .logo {
@@ -21,6 +24,8 @@ body {
     margin: 0 auto;
     padding: 0 20px;
     max-width: 980px;
+    
+    
   }
   
   nav {
@@ -58,6 +63,9 @@ body {
     list-style: none;
     margin: 0;
     padding: 0;
+    display: grid;
+    grid-template-columns: 200px 200px;
+    
   }
 
   .feature {
