--- a/Assignment-3-part-4/style.css
+++ b/Assignment-3-part-4/style.css
@@ -8,7 +8,7 @@ body {
   img {
       max-width: 100%;
       display: block;
-      float: left;
+
       
 
   }
@@ -24,6 +24,8 @@ body {
     margin: 0 auto;
     padding: 0 20px;
     max-width: 980px;
+    display: flex;
+    justify-content: end;
     
     
   }
@@ -65,9 +67,13 @@ body {
     padding: 0;
     display: grid;
     grid-template-columns: 200px 200px;
+    gap: 1px ;
     
   }
 
   .feature {
       width: 200px;
+      float: left;
+      margin-right: 5px;
+      padding: 20px;
   }
