--- a/Assignment-3-part-4/style.css
+++ b/Assignment-3-part-4/style.css
@@ -25,7 +25,6 @@ body {
     padding: 0 20px;
     max-width: 980px;
     display: flex;
-    justify-content: end;
     
     
   }
@@ -66,7 +65,7 @@ body {
     margin: 0;
     padding: 0;
     display: grid;
-    grid-template-columns: 200px 200px;
+    grid-template-columns: 1fr 1fr;
     gap: 1px ;
     
   }
@@ -74,6 +73,6 @@ body {
   .feature {
       width: 200px;
       float: left;
-      margin-right: 5px;
+      margin: 0;
       padding: 20px;
   }
